--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1154,7 +1154,7 @@
 % One message for the low level parsing system.
 %    \begin{macrocode}
 \__kernel_msg_new:nnnn { kernel } { misplaced-equals-sign }
-  { Misplaced~equals~sign~in~key-value~input~\msg_line_number: }
+  { Misplaced~equals~sign~in~key-value~input~\msg_line_context: }
   {
     LaTeX~is~attempting~to~parse~some~key-value~input~but~found~
     two~equals~signs~not~separated~by~a~comma.
