Skip \exp_not:n in \text_expand:n

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -538,6 +538,7 @@
 % \begin{macro}[EXP]{\@@_expand_replace:N}
 % \begin{macro}[EXP]{\@@_expand_replace:n}
 % \begin{macro}[EXP]{\@@_expand_cs_expand:N}
+% \begin{macro}[EXP]{\@@_expand_noexpand:n}
 %   After precautions against |&| tokens, start a simple loop: that of
 %   course means that \enquote{text} cannot contain the two recursion
 %   quarks. The loop here must be \texttt{f}-type expandable; we have
@@ -890,18 +891,29 @@
 \cs_new:Npn \@@_expand_replace:n #1 { \@@_expand_loop:w #1 }
 %    \end{macrocode}
 %   Finally, expand any macros which can be: this then loops back around to
-%   deal with what they produce.
+%   deal with what they produce. The only issue is if the token is
+%   \cs{exp_not:n}, as that must apply to the following balanced text.
 %    \begin{macrocode}
 \cs_new:Npn \@@_expand_cs_expand:N #1
   {
     \@@_if_expandable:NTF #1
-      { \exp_after:wN \@@_expand_loop:w #1 }
+      {
+        \token_if_eq_meaning:NNTF #1 \exp_not:n
+          { \@@_expand_noexpand:n }
+          { \exp_after:wN \@@_expand_loop:w #1 }
+      }
       {
         \@@_expand_store:n {#1}
         \@@_expand_loop:w
       }
   }
+\cs_new:Npn \@@_expand_noexpand:n #1
+  {
+    \@@_expand_store:n {#1}
+    \@@_expand_loop:w
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
