--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -898,7 +898,7 @@
   {
     \@@_if_expandable:NTF #1
       {
-        \token_if_eq_meaning:NNTF #1 \exp_not:n
+        \str_if_eq:nnTF {#1} { \exp_not:n }
           { \@@_expand_noexpand:n }
           { \exp_after:wN \@@_expand_loop:w #1 }
       }
