Add missing <@@=bool> tag

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1062,6 +1062,10 @@
 %
 % \subsection{Additions to \pkg{l3prg}}
 %
+%    \begin{macrocode}
+%<@@=bool>
+%    \end{macrocode}
+%
 % \begin{macro}[added = 2018-05-10]
 %   {\bool_set_inverse:N, \bool_set_inverse:c, \bool_gset_inverse:N, \bool_gset_inverse:c}
 %   Set to \texttt{false} or \texttt{true} locally or globally.
