Use Lua's builtin utf8 library if available

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -354,9 +354,10 @@ local write      = tex.write
 local write_nl   = texio.write_nl
 %    \end{macrocode}
 %
-%   Newer Con\TeX{}t releases replace the |unicode| library by |utf|.
+%   Newer Con\TeX{}t releases replace the |unicode| library by |utf| and
+%   since Lua 5.3 we can even use the Lua standard |utf8| library.
 %    \begin{macrocode}
-local utf8_char = (utf and utf.char) or unicode.utf8.char
+local utf8_char = (utf8 and utf8.char) or (utf and utf.char) or unicode.utf8.char
 %    \end{macrocode}
 %
 %   Deal with Con\TeX{}t: doesn't use |kpse| library.
