Provide \tex_tracingfonts:D in LuaLaTeX

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1272,7 +1272,7 @@
   \tex_else:D
     \tex_ifdefined:D \tex_directlua:D
       \tex_directlua:D { tex.enableprimitives("@@@@", {"tracingfonts"}) }
-      \tex_let:D \tex_tracingfonts:D \luatextracingfonts
+      \tex_let:D \tex_tracingfonts:D \@@@@tracingfonts
     \tex_fi:D
   \tex_fi:D
 \tex_fi:D
