--- a/l3kernel/doc/l3news10.tex
+++ b/l3kernel/doc/l3news10.tex
@@ -66,7 +66,7 @@ sufficiently flexible that for many common \LaTeX{} package structures, setting
 up for creating releases will require only a few lines of configuration.
 
 In addition to the documentation distributed with \pkg{l3build}, the project
-website~\cite[publications in 2014]{project-publications} contains some
+website~\cite[publications in 2014]{10:project-publications} contains some
 articles, videos and conference presentations that explain how to use
 \pkg{l3build} to manage and test any type of (\LaTeX{}) package.
 
@@ -186,7 +186,7 @@ floats. Early research results have been presented at Bacho\TeX{} 2016, TUG
 2016 in Toronto and later in the year at \mbox{DocEng'16}, the ACM Symposium on
 Document Engineering in Vienna. A link to the ACM paper (that allows a download
 free of charge) can be found on the project
-website~\cite{project-publications}. The site also holds the speaker notes from
+website~\cite{10:project-publications}. The site also holds the speaker notes from
 Toronto and will host a link to a video of the presentation once it becomes
 available.
 
@@ -212,7 +212,7 @@ for \hologo{LuaTeX}.
 
 \begin{thebibliography}{10}
   \raggedright
-  \bibitem{project-publications}
+  \bibitem{10:project-publications}
     Links to various publications by members of the \LaTeX{} Project Team.
     \newblock \url{https://www.latex-project.org/publications}.
 \end{thebibliography}
