error in debug code for box
\__box_eval:w does not exist

--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -1208,7 +1208,7 @@
 %<@@=box>
   \__kernel_patch_eval:nn
     { \@@_dim_eval:n }
-    { \@@_eval:w { } }
+    { \@@_dim_eval:w { } }
 %<@@=dim>
   \__kernel_patch_eval:nn
     {
