Clean up unknown key in l3keys2e

--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -183,6 +183,8 @@
                   { \l_keys_key_tl } { \@currname }
               }
           }
+        \AtEndOfPackage
+          { \keys_define:nn {#1} { unknown .undefine: } }
       }
     \clist_map_inline:Nn \l_@@_latexe_options_clist
       {
