Use str data consistently in l3keys (fixes #668)
This deprecates two long-standing tl: they
are defined manually but will need to be removed.

--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -969,7 +969,7 @@
 %<@@=keys>
   \__kernel_patch:nnn
     {
-      \cs_if_exist:cF { \c_@@_code_root_tl #1 }
+      \cs_if_exist:cF { \c_@@_code_root_str #1 }
         { \__kernel_debug_log:x { Defining~key~#1~\msg_line_context: } }
     }
     { }
