--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -118,6 +118,12 @@
 %   \LaTeXe{} kernel function \cs{ProcessOptions}).
 % \end{function}
 %
+% When passing unknown keys to other packages, the standard \LaTeX{}
+% \tn{CurrentOption} command is available and should be used. In contrast
+% to \cs{l_keys_key_str}, \cs{CurrentOption} is a token list and thus retains
+% category code information. Depending on how options are used by third-party
+% packages, this may be essential for the option to be recognised.
+%
 %\end{documentation}
 %
 %\begin{implementation}
