Allow for full range of encodings when expanding text (see #671)

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -850,7 +850,12 @@
   {
     \str_if_eq:nnTF {#1} { \protect }
       { \@@_expand_protect:N }
-      { \@@_expand_replace:N #1 }
+%<*initex>
+      { \@@_expand_expand:N #1 }
+%</initex>
+%<*package>
+      { \@@_expand_encoding:N #1 }
+%</package>
   }
 \cs_new:Npn \@@_expand_protect:N #1
   {
@@ -870,6 +875,46 @@
       { \@@_expand_store:n { \protect #1 } }
     \@@_expand_loop:w
   }
+%    \end{macrocode}
+%   Deal with encoding-specific commands in package mode: at the end of
+%   the preamble, we tidy up as the data otherwise vanishes.
+%    \begin{macrocode}
+%<*package>
+\cs_new:Npn \@@_expand_encoding:N #1
+  {
+    \exp_after:wN \@@_expand_encoding:Nnnnn \exp_after:wN #1
+      \cdp@elt { \q_recursion_tail } { } { } { } \q_recursion_stop
+  }
+\cs_new:Npn \@@_expand_encoding:Nnnnn #1#2#3#4#5
+  {
+    \quark_if_recursion_tail_stop_do:nn {#2} { \@@_expand_replace:N #1 }
+    \str_if_eq:eeTF { \exp_not:N #1 } { \exp_not:c { #2 - cmd } }
+      { \@@_expand_loop:w \__text_expand_textcomp:NN #1 }
+      { \@@_expand_encoding:Nnnnn #1 }
+  }
+\cs_new:Npn \@@_expand_encoding:Nn #1#2
+  {
+    \quark_if_recursion_tail_stop_do:nn {#2} { \@@_expand_replace:N #1 }
+    \str_if_eq:eeTF { \exp_not:N #1 } { \exp_not:c { #2 - cmd } }
+      { \@@_expand_loop:w \__text_expand_textcomp:NN #1 }
+      { \@@_expand_encoding:Nnnnn #1 }
+  }
+\AtBeginDocument
+  {
+    \cs_set:Npn \@@_expand_cs:N #1
+      {
+        \str_if_eq:nnTF {#1} { \protect }
+          { \@@_expand_protect:N }
+          { \@@_expand_replace:N #1 }
+      }
+    \cs_set_protected:Npn \cdp@elt #1#2#3#4
+      {
+        \text_declare_expand_equivalent:cn { #1 -cmd }
+          { \@@_expand_textcomp:NN }
+      }
+    \cdp@list
+  }
+%</package>
 %    \end{macrocode}
 %   See if there is a dedicated replacement, and if there is, insert it.
 %    \begin{macrocode}
@@ -966,9 +1011,6 @@
 %<*package>
 \cs_new:Npn \@@_expand_textcomp:NN #1#2 { \exp_not:n {#1} }
 \text_declare_expand_equivalent:cn { ?-cmd }  { \@@_expand_textcomp:NN }
-\text_declare_expand_equivalent:cn { T1-cmd }  { \@@_expand_textcomp:NN }
-\text_declare_expand_equivalent:cn { TS1-cmd } { \@@_expand_textcomp:NN }
-\text_declare_expand_equivalent:cn { TU-cmd }  { \@@_expand_textcomp:NN }
 %</package>
 %    \end{macrocode}
 % \end{macro}
