--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -74,7 +74,7 @@
 %   including implicit groups, are converted to their explicit equivalent.
 %   Any commands listed in \cs{l_text_expand_exclude_tl},
 %   \cs{l_text_accents_tl} and \cs{l_text_letterlike_tl} are excluded from
-%   expansion
+%   expansion.
 % \end{function}
 %
 % \begin{function}[added = 2020-01-22]
