Leave implicit tokens unchanged in \text_expand:n

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -64,14 +64,13 @@
 %   \begin{syntax}
 %     \cs{text_expand:n} \Arg{text}
 %   \end{syntax}
-%   Takes user input \meta{text} and transforms expandable and implicit
-%   content to the explicit equivalent. Protected commands (typically
+%   Takes user input \meta{text} and expands the content.
+%   Protected commands (typically
 %   formatting) are left in place, and no processing takes place of
 %   math mode material (as delimited by pairs given in
 %   \cs{l_text_math_delims_tl} or as the argument to commands listed
 %   in \cs{l_text_math_arg_tl}). Commands which are neither engine-
-%   nor \LaTeX{} protected are expanded exhaustively. Implicit tokens,
-%   including implicit groups, are converted to their explicit equivalent.
+%   nor \LaTeX{} protected are expanded exhaustively.
 %   Any commands listed in \cs{l_text_expand_exclude_tl},
 %   \cs{l_text_accents_tl} and \cs{l_text_letterlike_tl} are excluded from
 %   expansion.
@@ -697,7 +696,7 @@
 \cs_new:Npn \@@_expand_math_search:NNN #1#2#3
   {
     \quark_if_recursion_tail_stop_do:Nn #2
-      { \@@_expand_implicit:N #1 }
+      { \@@_expand_explicit:N #1 }
     \token_if_eq_meaning:NNTF #1 #2
       {
         \use_i_delimit_by_q_recursion_stop:nw
@@ -738,16 +737,6 @@
   {
     \@@_expand_store:n { ~ }
     \@@_expand_math_loop:Nw #1
-  }
-%    \end{macrocode}
-%   Conversion of implicit to explicit tokens does not have to account for
-%   spaces or brace groups: they are already fixed above. So we can assume that
-%   the result of this conversion is still an \texttt{N}-type token.
-%    \begin{macrocode}
-\cs_new:Npn \@@_expand_implicit:N #1
-  {
-    \exp_args:NNe \use:nn \@@_expand_explicit:N
-      { \@@_token_to_explicit:N #1 }
   }
 %    \end{macrocode}
 %   At this stage, either we have a control sequence or a simple character:
