Extend de-alt to pdfTeX

--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -648,9 +648,10 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_change_case_upper_de-alt:nnnN}
+% \begin{macro}[EXP]{\@@_change_case_upper_de-alt:nnnNN}
 %   A simple alternative version for German.
 %    \begin{macrocode}
-\bool_lazy_or:nnT
+\bool_lazy_or:nnTF
   { \sys_if_engine_luatex_p: }
   { \sys_if_engine_xetex_p: }
   {
@@ -659,14 +660,35 @@
         \int_compare:nNnTF { `#4 } = { "00DF }
           {
             \@@_change_case_store:e
-              { \char_generate:nn { "1E9E } { \@@_char_catcode:N #4 } }
+             { \char_generate:nn { "1E9E } { \@@_char_catcode:N #4 } }
             \use:c { @@_change_case_char_next_ #2 :nn }
               {#2} {#3}
           }
           { \@@_change_case_char:nnnN {#1} {#2} {#3} #4 }
       }
   }
+  {
+    \cs_new:cpx { @@_change_case_upper_de-alt:nnnN } #1#2#3#4
+      {
+        \exp_not:N \int_compare:nNnTF { `#4 } = { "00C3 }
+          {
+            \exp_not:c { @@_change_case_upper_de-alt:nnnNN }
+              {#1} {#2} {#3} #4
+          }
+          { \exp_not:N \@@_change_case_char:nnnN {#1} {#2} {#3} #4 }
+      }
+    \cs_new:cpn { @@_change_case_upper_de-alt:nnnNN } #1#2#3#4#5
+      {
+        \int_compare:nNnTF { `#5 } = { "009F }
+          {
+            \@@_change_case_store:V \c_@@_grosses_Eszett_tl
+            \use:c { @@_change_case_char_next_ #2 :nn } {#2} {#3}
+          }
+          { \@@_change_case_char:nnnN {#1} {#2} {#3} #4#5 }
+      }
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_change_case_upper_el:nnnN}
@@ -1161,7 +1183,8 @@
 %     \c_@@_dotless_i_tl ,
 %     \c_@@_dotted_I_tl  ,
 %     \c_@@_i_ogonek_tl  ,
-%     \c_@@_I_ogonek_tl
+%     \c_@@_I_ogonek_tl  ,
+%     \c_@@_grosses_Eszett_tl
 %   }
 %  For cases where there is an $8$-bit option in the |T1| font set up,
 %  a variant is provided in both cases.
@@ -1182,16 +1205,22 @@
                       \exp_not:N \char_generate:nn {##1} { 13 }
                     \exp_after:wN \exp_after:wN \exp_after:wN
                       \exp_not:N \char_generate:nn {##2} { 13 }
+                    \tl_if_blank:nF {##3}
+                      {
+                        \exp_after:wN \exp_after:wN \exp_after:wN
+                          \exp_not:N \char_generate:nn {##3} { 13 }
+                      }
                   }
               }
             \use:x
               { \@@_tmp:w \char_to_utfviii_bytes:n { "#2 } }  
           \group_end:
         }
-      \@@_tmp:w \c_@@_dotless_i_tl { 0131 }
-      \@@_tmp:w \c_@@_dotted_I_tl  { 0130 }
-      \@@_tmp:w \c_@@_i_ogonek_tl  { 012F }
-      \@@_tmp:w \c_@@_I_ogonek_tl  { 012E }
+      \@@_tmp:w \c_@@_dotless_i_tl      { 0131 }
+      \@@_tmp:w \c_@@_dotted_I_tl       { 0130 }
+      \@@_tmp:w \c_@@_i_ogonek_tl       { 012F }
+      \@@_tmp:w \c_@@_I_ogonek_tl       { 012E }
+      \@@_tmp:w \c_@@_grosses_Eszett_tl { 1E9E }
     }
 \group_end:
 %    \end{macrocode}
