--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -156,7 +156,9 @@
 %       I-dot and introduced when upper casing i-dotless.
 %     \item German (\texttt{de-alt}).
 %       An alternative mapping for German in which the lowercase
-%       \emph{Eszett} maps to a \emph{gro\ss{}es Eszett}.
+%       \emph{Eszett} maps to a \emph{gro\ss{}es Eszett}. This transformation
+%       is available using \pdfTeX{} as there is a |T1| slot for the
+%       result.
 %     \item Greek (\texttt{el}).
 %       Removes accents from Greek letters when uppercasing; titlecasing
 %       leaves accents in place.
