Fix `undo-recent-deprecations` to reload l3deprecation.def

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -558,6 +558,10 @@
 % \subsection{Loading the patches}
 %
 % When loaded first, the patches are simply read here.
+% Here the deprecation code is loaded with the lower-level |\__kernel_...|
+% macro because we don't want it to flip the \cs{g__sys_deprecation_bool}
+% boolean, so that the deprecation code can be re-loaded later (when using
+% \texttt{undo-recent-deprecations}).
 %
 %    \begin{macrocode}
 \group_begin:
@@ -575,7 +579,7 @@
   }
 \cs_gset_protected:Npn \__kernel_sys_configuration_load:n #1
   { \file_input:n { #1 .def } }
-\sys_load_deprecation:
+\__kernel_sys_configuration_load:n { l3deprecation }
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -1060,7 +1064,7 @@
 % \begin{macro}[EXP, deprecated = 2021-07-01]{\c_term_ior}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { -1 }
-\cs_new_protected:Npn \c_term_ior { -1 \scan_stop: }
+\cs_gset_protected:Npn \c_term_ior { -1 \scan_stop: }
 %    \end{macrocode}
 % \end{macro}
 %
