register prefixes [ci skip]

--- a/l3kernel/doc/l3prefixes.tex
+++ b/l3kernel/doc/l3prefixes.tex
@@ -74,9 +74,17 @@ for those people who are interested.
 
 This file lists the prefixes which have been registered with the \LaTeX{}
 team for use in \textsf{expl3} code. Programmers are invited to register their
-(public) prefix use by contacting the team. We recommend that short prefixes
-are avoided as there are a limited number of these very general names available.
-The file \texttt{l3prefixes.csv} contains more details on each module, for
+(public) prefix use by contacting the team at
+\begin{quote}
+  \texttt{modules@latex-project.org}
+\end{quote}
+with the relevant information for the \texttt{.csv} file, i.e.,
+\textit{Prefix, Module or package, Registrant, Homepage, Source repository, Issue tracker}.
+
+
+We recommend that short prefixes are avoided as there are a limited
+number of these very general names available.  The
+file \texttt{l3prefixes.csv} contains more details on each module, for
 example any information on source repository or issue tracker.
 
 \PrintTable
