Remove duplicate word

--- a/l3experimental/l3sys-shell/l3sys-shell.dtx
+++ b/l3experimental/l3sys-shell/l3sys-shell.dtx
@@ -67,7 +67,7 @@
 %   \begin{syntax}
 %     \cs{sys_shell_mkdir:n} \Arg{directory}
 %   \end{syntax}
-%   Creates the \meta{directory}, which should should  be specified using |/| as
+%   Creates the \meta{directory}, which should be specified using |/| as
 %   a path separator.  If unrestricted shell escape is not enabled, no action is
 %   attempted.
 % \end{function}
@@ -95,7 +95,7 @@
 %   \begin{syntax}
 %     \cs{sys_shell_rmdir:n} \Arg{directory}
 %   \end{syntax}
-%   Removes the \meta{directory}, which should should  be specified using |/| as
+%   Removes the \meta{directory}, which should be specified using |/| as
 %   a path separator.  If unrestricted shell escape is not enabled, no action is
 %   attempted.
 % \end{function}
