More repeated words

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1751,7 +1751,7 @@
 \cs_new_protected:Npn \galley_cutout_right:nn
   { \@@_cutout:nnn { right } }
 %    \end{macrocode}
-%   The cutout information needs to be saved in in the appropriate sequence.
+%   The cutout information needs to be saved in the appropriate sequence.
 %   First, the input is converted to a (temporary) sequence. If there is
 %   no existing cutout defined, this is simply stored. On the other hand,
 %   if there is a cutout already active, the new one needs to be added to
