--- a/l3kernel/l3fp-basics.dtx
+++ b/l3kernel/l3fp-basics.dtx
@@ -1575,7 +1575,7 @@
 %   first approximation of the square root of the significand $10^{8}
 %   a_1 + a_2 = 10^{8} |#2#3| + |#4#5|$ through Newton's method,
 %   starting at $x = 57234133 \simeq 10^{7.75}$.  Otherwise, first shift
-%   the significand of of the argument by one digit, getting
+%   the significand of the argument by one digit, getting
 %   $a_1'\in[10^{6}, 10^{7})$ instead of $[10^{7}, 10^{8})$, then use
 %   Newton's method starting at $17782794 \simeq 10^{7.25}$.
 %    \begin{macrocode}
