--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -2292,7 +2292,7 @@
 % \begin{macro}{\@@_assign_tokenlist:}
 % \begin{macro}{\@@_assign_tokenlist_aux:NN}
 %   Life would be easy here if it were not for \cs{KeyValue}. To deal
-%   correctly with that, we need to allow for the recovery a a stored value
+%   correctly with that, we need to allow for the recovery a stored value
 %   at point of use.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_assign_tokenlist:
