remove some double words [ci skip]

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -217,7 +217,7 @@ and all files in that bundle must be distributed together.
 %
 % This isn't very flexible, since it assumes that we \emph{always} want
 % to print the documentation.  For the \pkg{expl3} sources, I wanted to
-% be be able to input \file{.dtx} files in two modes: only displaying
+%  be able to input \file{.dtx} files in two modes: only displaying
 % the documentation, and only displaying the implementation.  For
 % example:
 % \begin{verbatim}
