--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -121,7 +121,7 @@
 % \subsection{Layer two: internal dimensions}
 %
 % \begin{TemplateInterfaceDescription}{measure}
-%   \TemplateArgument{}{} ^^A A hack
+%   \TemplateArgument{}{} ^^A Some hack
 %   \TemplateSemantics
 %   Sets the width available to typeset material within the galley.
 %   The \meta{left margin} and \meta{right margin} values are used in the
@@ -192,7 +192,7 @@
 % \subsection{Layer three: paragraph shape}
 %
 % \begin{TemplateInterfaceDescription}{parshape}
-%   \TemplateArgument{}{}^^A A hack
+%   \TemplateArgument{}{}^^A Some hack
 %   \TemplateSemantics
 %   Template of this type define any shaping of the paragraph within the
 %   current measure of the galley. Thus they are used to generate
