Typos in l3basics

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1067,7 +1067,7 @@
 %    \cs{use_none_delimit_by_q_stop:w} \meta{balanced text} \cs{q_stop}
 %    \cs{use_none_delimit_by_q_recursion_stop:w} \meta{balanced text} \cs{q_recursion_stop}
 %   \end{syntax}
-%   Absorb the \meta{balanced text} form the input stream delimited by
+%   Absorb the \meta{balanced text} from the input stream delimited by
 %   the marker given in the function name, leaving nothing in the
 %   input stream.
 % \end{function}
@@ -1083,7 +1083,7 @@
 %    \cs{use_i_delimit_by_q_stop:nw} \Arg{inserted tokens} \meta{balanced text} \cs{q_stop}
 %    \cs{use_i_delimit_by_q_recursion_stop:nw} \Arg{inserted tokens} \meta{balanced text} \cs{q_recursion_stop}
 %   \end{syntax}
-%   Absorb the \meta{balanced text} form the input stream delimited by
+%   Absorb the \meta{balanced text} from the input stream delimited by
 %   the marker given in the function name, leaving \meta{inserted tokens}
 %   in the input stream for further processing.
 % \end{function}
