--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -951,7 +951,7 @@
 %<@@=keyval>
 %    \end{macrocode}
 %
-% \begin{macro}[internal]{\@@_tmp:NN}
+% \begin{macro}{\@@_tmp:NN}
 %   This temporary macro will be used since some of the definitions will need an
 %   active comma or equals sign. Inside of this macro |#1| will be the active
 %   comma and |#2| will be the active equals sign.
@@ -975,7 +975,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_loop_active:NNw}
+% \begin{macro}{\@@_loop_active:NNw}
 %   First a fast test for the end of the loop is done, it'll gobble everything
 %   up to a \cs{q_mark} immediately followed by a \cs{q_recursion_tail}. The
 %   loop ending macro will gobble everything to the last \cs{q_mark} in this
@@ -993,7 +993,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_loop_other:NNw}
+% \begin{macro}{\@@_loop_other:NNw}
 %   The second loop uses the same test for its end as the first loop, next it
 %   tests whether there are other or active equals signs, throwing an error if
 %   there are both. If there are none, test whether the argument is blank or is
@@ -1027,7 +1027,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_split_active:wN, \@@_split_active_aux:nwN}
+% \begin{macro}{\@@_split_active:wN, \@@_split_active_aux:nwN}
 %   Splits at the first active equals sign and tests whether there are any more
 %   valid split points, if so throw an error and gobble the remaining
 %   \meta{function_2}, which will not yet be gobbled. If there was only one
@@ -1091,7 +1091,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_split_other:wN, \@@_split_other:nwN}
+% \begin{macro}{\@@_split_other:wN, \@@_split_other:nwN}
 %   These work exactly as \cs[no-index]{@@_split_active:wN}, just for
 %   equals signs of category other.
 %    \begin{macrocode}
@@ -1109,7 +1109,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_key:nN}
+% \begin{macro}{\@@_key:nN}
 %   This will get the current key with spaces trimmed and \meta{function_1} as
 %   its arguments. All it has to do is put them in an \cs{exp_not:n} and reorder
 %   them.
@@ -1121,7 +1121,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_key_val:nnN}
+% \begin{macro}{\@@_key_val:nnN}
 %   This will get the key name and value with spaces trimmed. It has to 
 %   assert that the key name isn't empty. Afterwards
 %   put them into an \cs{exp_not:n} together with \meta{function_2}. If the key
@@ -1136,7 +1136,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_if_empty:w,\@@_if_blank:w,\@@_if_recursion_tail:w}
+% \begin{macro}{\@@_if_empty:w,\@@_if_blank:w,\@@_if_recursion_tail:w}
 %   All these tests work by gobbling tokens until a certain combination is met,
 %   which makes them pretty fast. The test for a blank argument should be called
 %   with an arbitrary token following the argument. Each of these utilize the
@@ -1148,7 +1148,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_has_false:w,\@@_blank_true:w,\@@_empty_key:w}
+% \begin{macro}{\@@_has_false:w,\@@_blank_true:w,\@@_empty_key:w}
 %   These macros will be called if the tests above didn't gobble them, they
 %   execute the branching.
 %    \begin{macrocode}
@@ -1161,7 +1161,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_gobble_q_mark:w}
+% \begin{macro}{\@@_gobble_q_mark:w}
 %   If we know what to gobble (the \cs{q_mark}), it is faster to name it
 %   explicitly than to use \cs{use_none:n}.
 %    \begin{macrocode}
@@ -1169,7 +1169,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_if_has_equal_other:w}
+% \begin{macro}{\@@_if_has_equal_other:w}
 %   Another test that works by gobbling tokens until a specific one is hit.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_has_equal_other:w #1 =
@@ -1179,7 +1179,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_misplaced_equal_error:}
+% \begin{macro}{\@@_misplaced_equal_error:}
 %   Just throw an error expandably. This is hid inside a macro so that other
 %   macros don't have to gobble so many tokens, which increases speed.
 %    \begin{macrocode}
@@ -1196,8 +1196,8 @@
   { Misplaced~equals~sign~in~key-value~input~\msg_line_context: }
 %    \end{macrocode}
 %
-% \begin{macro}[internal]{\@@_trim:nN}
-% \begin{macro}[internal]{\@@_trim_auxi:w,\@@_trim_auxii:w,\@@_trim_auxiii:w,\@@_trim_auxiv:w}
+% \begin{macro}{\@@_trim:nN}
+% \begin{macro}{\@@_trim_auxi:w,\@@_trim_auxii:w,\@@_trim_auxiii:w,\@@_trim_auxiv:w}
 % And an adapted version of \cs{__tl_trim_spaces:nn} which is a bit faster for
 % our use case, as it can strip the braces at the end. This is pretty much the
 % same concept, so I won't comment on it here. The speed gain by using this
